Add Image and design resycelerView

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,11 +7,10 @@
     tools:context=".MainActivity">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_books"
+        android:id="@+id/rv_book"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:listitem="@layout/item_book"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"/>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
