--- a/app/src/main/res/layout/item_book.xml
+++ b/app/src/main/res/layout/item_book.xml
@@ -3,11 +3,24 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-
+    android:id="@+id/cardView"
     android:layout_margin="8dp"
     android:layout_height="wrap_content"
     android:backgroundTint="#81C784"
-    app:cardElevation="8dp">
+    app:cardElevation="8dp"
+    android:clickable="true"
+    android:focusable="true">
+
+<!--<?xml version="1.0" encoding="utf-8"?>-->
+<!--<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
+<!--    xmlns:tools="http://schemas.android.com/tools"-->
+<!--    android:layout_width="match_parent"-->
+
+<!--    android:layout_margin="8dp"-->
+<!--    android:layout_height="wrap_content"-->
+<!--    android:backgroundTint="#81C784"-->
+<!--    app:cardElevation="8dp">-->
 
     <LinearLayout
         android:layout_width="match_parent"
